Apply the correct elements' spacing

--- a/src/components/SectionHeading/_SectionHeading.scss
+++ b/src/components/SectionHeading/_SectionHeading.scss
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@import "../../scss/helpers/mixins/breakpoints";
+
 .SectionHeading {
   // Background image.
   background-size: cover;
@@ -8,6 +10,10 @@
 
   .white-border {
     border: 2px solid #f9fdfc;
+    padding: 40px 0;
+    @include media-breakpoint-up(lg) {
+      padding: 80px 0;
+    }
   }
 
   // Text styling.
